--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bs4>=0.0.2",
+    "lxml>=6.0.2",
     "marimo>=0.15.2",
     "matplotlib>=3.10.6",
     "numpy>=2.3.2",
